--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@rjsf/core": "^5.24.11",
+    "@rjsf/validator-ajv8": "^5.24.11",
     "@tailwindcss/vite": "^4.1.8",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
