--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@heroui/checkbox": "^2.3.20",
+    "@heroui/system": "^2.4.17",
+    "@heroui/theme": "^2.4.17",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@rjsf/core": "^5.24.11",
     "@rjsf/utils": "^5.24.11",
     "@rjsf/validator-ajv8": "^5.24.11",
     "@tailwindcss/vite": "^4.1.8",
+    "framer-motion": "^12.17.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
