--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@heroui/checkbox": "^2.3.20",
+    "@heroui/react": "^2.7.10",
     "@heroui/system": "^2.4.17",
     "@heroui/theme": "^2.4.17",
     "@mui/icons-material": "^7.1.1",
@@ -23,7 +24,7 @@
     "@rjsf/utils": "^5.24.11",
     "@rjsf/validator-ajv8": "^5.24.11",
     "@tailwindcss/vite": "^4.1.8",
-    "framer-motion": "^12.17.0",
+    "framer-motion": "^12.17.1",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
